feat: complete end-to-end v0.5 data flow from simulator to frontend
- update simulator to generate continuous test routes instead of isolated points
- align backend and frontend interfaces
- enable frontend rendering of CPA/TCPA data from backend
- verify end-to-end flow through MQTT, WebSocket and 2.5D map rendering

Closes #5